Update cell script